# GDP_distribution

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: jpx33_sectors.yaml  jsic_sectors.yaml  size_thresholds.yaml
data/samples/: census_sample.csv  corporate_stats_sample.csv  gdp_by_industry_sample.csv
mcp_server/: _tools.py  pyproject.toml  server.py
modules/: data_loader.py  heatmap_builder.py  insights.py  sample_generator.py  transformer.py
scripts/: build_estat_dataset.py  generate_samples.py  pull_estat_statsdata.py
tests/: test_build_estat_mappings.py  test_data_loader.py  test_mcp_tools.py  test_transformer.py  test_ui_e2e.py
